# test-btg

./: CMakeLists.txt  README.md  version.txt
CMakeModules/: ConfigureMsvc3rdParty.cmake  FindGLEW.cmake  FindPLIB.cmake  FindSHP2.cmake  FindSimGear.cmake  FindZLIB.cmake
build.x64/: .gitignore  build-me.bat  cmake-clean.txt  run-test.bat  updexe.bat
src/: btg-elev.cxx  load-btg.cxx  load-btg.hxx  load-stg.cxx  load-stg.hxx  palette.cxx  palette.hxx  test-btg.cxx  test-btg.hxx  test_binobj.cxx
src/Lib/: CMakeLists.txt
src/Lib/Geometry/: CMakeLists.txt  poly_support.cxx
src/Lib/Polygon/: clipper.cpp  clipper.hpp  polygon.cxx
src/Lib/TriangleJRS/: triangle.c
src/Lib/vpf/: CMakeLists.txt  component.cxx  vpf-dump.cxx
src/Prep/TGVPF/: CMakeLists.txt
src/chkbtg/: .gitignore  CMakeLists.txt  README.md  airport.c  airport.h  bsphere.c  bsphere.h  btg2dxf.c  btgchk.c  btgio.c  btgio.h  check.c  check.h  color.c  color.h  coord.c  coord.h  edge.c  edge.h  element.c  element.h  file.c  file.h  geoin.lsp  geometry.c  geometry.h  header.c  header.h  normal.c  normal.h  object.c  object.h  point.c  point.h  property.c  property.h  raw.c  raw.h  seam.c  seam.h  (+7 more)
src/dirent/: dirent.c
src/utils/: sprtf.cxx  sprtf.hxx  sprtfstr.cxx  sprtfstr.hxx  utils.cxx  utils.hxx
src/vpf/: CMakeLists.txt  component.cxx  component.hxx  table.cxx  vpf-dump.cxx  vpf-summary.cxx  vpf-topo-org.cxx  vpf-topology.cxx  vpfbase.hxx
